--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,10 @@ lib_managed/
 src_managed/
 project/boot/
 project/plugins/project/
+.sbtserver
 
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
+.idea/
+.idea_modules/
