Add Postgres support

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,6 +35,8 @@ play.i18n.langs = [ "en" ]
 # db.default.username=sa
 # db.default.password=""
 
+db.default.url=${?DATABASE_URL}
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
