Add Postgres 9.4 support

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -35,6 +35,7 @@ play.i18n.langs = [ "en" ]
 # db.default.username=sa
 # db.default.password=""
 
+db.default.driver=org.postgresql.Driver
 db.default.url=${?DATABASE_URL}
 
 # Evolutions
